--- a/app/src/main/res/layout/activity_otaacivity.xml
+++ b/app/src/main/res/layout/activity_otaacivity.xml
@@ -26,6 +26,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +41,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,6 +56,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,8 +71,10 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
+            android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.896"
@@ -82,6 +87,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -96,6 +102,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -110,6 +117,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -124,6 +132,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -135,16 +144,16 @@
 
         <Button
             android:id="@+id/sendbtn"
-            android:layout_width="207dp"
-            android:layout_height="67dp"
-            android:layout_marginBottom="50dp"
-            android:text="开始升级"
-            android:textSize="26sp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:text="设置密码"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.842"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pass10"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/bleadress"
+            app:layout_constraintVertical_bias="0.876" />
 
         <TextView
             android:id="@+id/blename"
@@ -176,18 +185,17 @@
 
         <TextView
             android:id="@+id/updateinfo"
-            android:layout_width="224dp"
-            android:layout_height="58dp"
-            android:layout_marginBottom="352dp"
+            android:layout_width="352dp"
+            android:layout_height="78dp"
             android:maxLines="5"
             android:scrollbars="vertical"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.085"
+            app:layout_constraintHorizontal_bias="0.176"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bleadress"
-            app:layout_constraintVertical_bias="0.135" />
+            app:layout_constraintVertical_bias="0.042" />
 
         <TextView
             android:id="@+id/blelabnme"
@@ -222,7 +230,7 @@
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -230,14 +238,14 @@
             app:layout_constraintHorizontal_bias="0.027"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/updateinfo"
-            app:layout_constraintVertical_bias="0.043" />
+            app:layout_constraintVertical_bias="0.105" />
 
         <EditText
             android:id="@+id/pass"
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -245,14 +253,14 @@
             app:layout_constraintHorizontal_bias="0.305"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/updateinfo"
-            app:layout_constraintVertical_bias="0.043" />
+            app:layout_constraintVertical_bias="0.109" />
 
         <EditText
             android:id="@+id/pass2"
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -260,14 +268,14 @@
             app:layout_constraintHorizontal_bias="0.593"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/updateinfo"
-            app:layout_constraintVertical_bias="0.043" />
+            app:layout_constraintVertical_bias="0.107" />
 
         <EditText
             android:id="@+id/pass3"
             android:layout_width="68dp"
             android:layout_height="47dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:digits="1234567890."
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -275,7 +283,19 @@
             app:layout_constraintHorizontal_bias="0.896"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/updateinfo"
-            app:layout_constraintVertical_bias="0.043" />
+            app:layout_constraintVertical_bias="0.107" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="115dp"
+            android:layout_height="48dp"
+            android:text="清除ID"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.148"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.897" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
